[tool.poetry]
name = "miditocsv"
version = "0.1.0"
description = ""
authors = ["Luke Mino-Altherr <lminoaltherr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
mido = "^1.3.2"
click = "^8.1.7"

[tool.poetry.scripts]
miditocsv = "miditocsv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
